5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1577_996.log
== TEST (2019-03-14 19:34:40) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- * ")
print(" ***** ")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:34:54) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.156073
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:35:05) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- * ")
print(" ***** ")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:21:05) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- * ")
print(" ***** ")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:23:16) 
-- CODE:
 print(" ***** ")
print("(* o o *)")
print("*  ^  *")
print("* --- * ")
print(" ***** ")
-- ERROR:
File "XXXX", line 1
    print(" ***** ")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:23:40) 
-- CODE:
print(" ***** ")
print("(* o o *)")
print("*  ^  *")
print("* --- * ")
print(" ***** ")
-- OUTPUT:
***** 
(* o o *)
*  ^  *
* --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:24:06) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print("*  ^  *")
print("* --- * ")
print(" ***** ")
-- OUTPUT:
***** 
(* o o *)
*  ^  *
* --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:28:07) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:30:39) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:31:26) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:51:03) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:51:03) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:51:11) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:51:14) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:51:55) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.142901
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
 *  ^  *
 * --- * 
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
